<resources>

    <!--   A - 7   -->
    <string name="aboutus">Sobre nosotros</string>
    <string name="age">Edad</string>
    <string name="age_limit">Límite de edad</string>
    <string name="app_name">Nite</string>
    <string name="assistant">Asistente</string>
    <string name="assistants">Asistentes</string>
    <string name="assistir">Assistir</string>

    <!--   B - 4   -->
    <string name="ban">+18</string>
    <string name="barcelona">Barcelona</string>
    <string name="bcn">BCN</string>
    <string name="book">Reservar</string>

    <!--   C - 17   -->
    <string name="cancel">Cancelar</string>
    <string name="cancelAssist">Cancelar Asistencia</string>
    <string name="cancelAssistQuest">¿Quieres cancelar la assistencia a este evento?</string>
    <string name="cancelAssistQuestList">¿Quieres cancelar la assistencia a este evento?\nSi aceptas, se te eliminará de la lista Nite de este evento </string>
    <string name="change_passwd">Cambiar contraseña</string>
    <string name="city">Ciudad</string>
    <string name="config">Configuración</string>
    <string name="confirmed">Confirmado</string>
    <string name="confirmAssist">Confirmar assistencia</string>
    <string name="confirmAssistQuest">¿Quieres confirmar la assistencia a este evento?</string>
    <string name="confirmAssistQuestList">¿Quieres confirmar la assistencia a este evento?\nSe te añadirá automatiamente a la lista Nite de este evento</string>
    <string name="contactt">Contáctanos</string>
    <string name="contactSubject">Contacta con Nite</string>
    <string name="cvc">CVC</string>
    <string name="cardHolder">Titular de la tarjeta</string>
    <string name="cardNumber">Número de la tarjeta</string>
    <string name="cardData">Datos de la tarjeta</string>

    <!--   D - 3   -->
    <string name="date">Fecha</string>
    <string name="day">Dia</string>
    <string name="descr">Descripción</string>

    <!--   E - 19   -->
    <string name="events">Eventos</string>
    <string name="event">Evento</string>
    <string name="editAge">Editar edad</string>
    <string name="editCity">Editar ciudad</string>
    <string name="editCityMessage">Introduce tu ciudad</string>
    <string name="editPhone">Editar móvil</string>
    <string name="editPhoneMessage">Introduce tu móvil</string>
    <string name="eur">€</string>
    <string name="eur15">15€</string>
    <string name="editProfile">Editar Perfil</string>
    <string name="eventHistory">Actividad reciente: </string>
    <string name="email">Correo</string>
    <string name="emailAddress">niteprojectsa@gmail.com</string>
    <string name="emailPasswdIncorrect">Correo o contraseña incorrectos</string>
    <string name="emailRequired">El correo es obligatorio</string>
    <string name="emailValid">Introduce un correo válido</string>
    <string name="emailVerification">Te hemos enviado un correo. Verifícalo.</string>
    <string name="emailExisting">Has de verificar el correo que te hemos enviado</string>
    <string name="emailChangePasswd">Correo de cambio de contraseña enviado</string>
    <string name="emailSendImpossible">No ha sido posible enviar el correo</string>
    <string name="error">Ha ocurrido un error inesperado. Vuelve a intentarlo</string>

    <!--   F - 10   -->
    <string name="friends">Amigos</string>
    <string name="from">De</string>
    <string name="followers">Seguidores</string>
    <string name="follower">Seguidor</string>
    <string name="following">Seguidos</string>
    <string name="following1">Seguido</string>
    <string name="followin">Le sigues</string>
    <string name="follow">Seguir</string>
    <string name="free">Gratis</string>
    <string name="forgot_passwd"> ¿Olvidaste tu contraseña? </string>

    <!--   G - 2   -->
    <string name="google">Google</string>
    <string name="googleSignInFail">Algo ha salido mal. Prueba otra vez.</string>

    <!--   H - 2   -->
    <string name="hour">Hora</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--   I - 0   -->

    <!--   J - 1   -->
    <string name="join">Apuntarse</string>

    <!--   K - 0   -->

    <!--   L - 5   -->
    <string name="locationn">Ubicación</string>
    <string name="niteList">Lista Nite</string>
    <string name="lorem_ipsum">Lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum,
        lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum,
        lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum,
        lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum,
        lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum</string>
    <string name="lorem_ipsum_corto">Lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum,
        lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum,
        lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum</string>
    <string name="logout">Cerrar Sesión</string>

    <!--   M - 7   -->
    <string name="musica">Música</string>
    <string name="myEvents">Mis Eventos</string>
    <string name="myFriends">Mis Amigos</string>
    <string name="map">Mapa</string>
    <string name="madrid">Madrid</string>
    <string name="mad">MAD</string>
    <string name="month">Mes</string>

    <!--   N - 12   -->
    <string name="notifications">Notificaciones</string>
    <string name="no_notif">No hay notificaciones</string>
    <string name="no_requests">No hay actividad</string>
    <string name="nothing"></string>
    <string name="noEditField">Este campo no se puede editar</string>
    <string name="no_results">No hay resultados</string>
    <string name="no_events_day">No hay eventos para este día</string>
    <string name="no_events_recomendation">No hay recomendaciones para este día</string>
    <string name="no_assists">Aún no hay assistentes a este evento. Apúntate.</string>
    <string name="no_friends">No hay amigos que vayan a este evento</string>
    <string name="name">Nombre</string>
    <string name="nameRequired">El nombre es obligatorio</string>

    <!--   O - 0   -->

    <!--   P - 9   -->
    <string name="profile">Perfil</string>
    <string name="profile_name">Nombre Apellido</string>
    <string name="people">Personas</string>
    <string name="passwd">Contraseña</string>
    <string name="passwdRequired">La contraseña es obligatoria</string>
    <string name="passwdValid">La longitud mínima de la contraseña ha de ser de 6</string>
    <string name="price">Precio</string>
    <string name="pricedots">Precio:</string>
    <string name="pay">Comprar</string>

    <!--   Q - 1   -->
    <string name="quanty">Cantidad</string>

    <!--   R - 1   -->
    <string name="reservationData">Datos de la reserva</string>

    <!--   S - 6   -->
    <string name="search">Buscar</string>
    <string name="settings">Ajustes</string>
    <string name="schedule">Horario</string>
    <string name="seeTicket">Ver entrada</string>
    <string name="signIn">Iniciar Sesión</string>
    <string name="signUp">Registrarse</string>

    <!--   T - 9   -->
    <string name="today">Hoy</string>
    <string name="tickets">Entradas</string>
    <string name="ticket">Entrada</string>
    <string name="to">A</string>
    <string name="teSigue">Te sigue</string>
    <string name="title_activity_login">Sign in</string>
    <string name="telef">Teléfono</string>
    <string name="terms">Términos y Condiciones</string>
    <string name="title_activity_maps">Map</string>

    <!--   U - 2   -->
    <string name="update">Actualizar</string>
    <string name="userExisting">Este correo ya existe</string>

    <!--   V - 2   -->
    <string name="vest">Vestimenta</string>
    <string name="vip">VIP</string>

    <!--   W - 1   -->
    <string name="web_client_id">179814504063-abak3s5aujahcvvijf7fq39p39f3r01d.apps.googleusercontent.com</string>

    <!--   X - 0   -->

    <!--   Y - 1   -->
    <string name="year">Año</string>

    <!--   Z - 1   -->
    <string name="zero">0</string>
    <string name="searchFriends">Buscar amigos</string>
    <string name="phone">Móvil</string>


</resources>