<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PaymentActivity"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/rlBtnPayListAux"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservationData"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/payListTextEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/payListTextSchedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descr"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/payListDescr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tickets"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <TextView
                    android:id="@+id/tvPayListQuantyTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quanty"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">

                    <ImageButton
                        android:id="@+id/imgBtnPayListSubQuanty"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_previous"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:selectableItemBackgroundBorderless"/>

                    <TextView
                        android:id="@+id/tvPayListQuanty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:layout_toEndOf="@id/imgBtnPayListSubQuanty"
                        android:layout_centerVertical="true"/>

                    <ImageButton
                        android:id="@+id/imgBtnPayListAddQuanty"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_next"
                        android:layout_toEndOf="@id/tvPayListQuanty"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?android:selectableItemBackgroundBorderless"/>


                </RelativeLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <TextView
                    android:id="@+id/tvPayListPriceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:id="@+id/tvPayListPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/free"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                </RelativeLayout>



            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarPayList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"/>

        </RelativeLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/tvPayListNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*Nota: busca este evento en tu perfil para poder ver la entrada que tendrás que enseñar en la puerta de la discoteca"
        android:textColor="@color/pink2"
        android:layout_above="@id/rlBtnPayListAux"
        android:layout_margin="15dp"
        android:visibility="invisible"/>

    <RelativeLayout
        android:id="@+id/rlBtnPayListAux"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/rlBtnPayList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackground">

            <TextView
                android:id="@+id/tvBtnPayList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>