<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/rlClearFocus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/llcenter"
            android:layout_width="285dp"
            android:layout_height="320dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="285dp"
                android:layout_height="65dp"
                android:padding="5dp">

                <EditText
                    android:id="@+id/emailEditTextSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/rectangle_white_pink"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="285dp"
                android:layout_height="65dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_centerInParent="true"
                    android:id="@+id/passwdEditTextSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/passwd"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/rectangle_white_pink"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_margin="5dp"
                    android:layout_width="130dp"
                    android:layout_height="55dp"
                    android:background="@drawable/rectangle_pink"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/signIn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_alignParentStart="true"/>

                <Button
                    android:id="@+id/btnSignInGoogle"
                    android:layout_margin="5dp"
                    android:layout_width="130dp"
                    android:layout_height="55dp"
                    android:background="@drawable/rectangle_white_pink"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/google"
                    android:textAllCaps="false"
                    android:textColor="@color/pink"
                    android:layout_alignParentEnd="true"
                    android:drawableLeft="@drawable/googleresize"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlforgotPasswd"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvForgotPasswd"
                    android:padding="5dp"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_passwd" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>