<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignInFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llcenter"
            android:layout_width="285dp"
            android:layout_height="320dp"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="285dp"
                android:layout_height="65dp"
                android:padding="5dp">

                <EditText
                    android:id="@+id/nameEditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/rectangle_white_pink"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="285dp"
                android:layout_height="65dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/emailEditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/rectangle_white_pink"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="285dp"
                android:layout_height="65dp"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_centerInParent="true"
                    android:id="@+id/passwdEditTextSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/passwd"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/rectangle_white_pink"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="285dp"
                android:layout_height="65dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_pink"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/signUp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>