<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:divider="?android:dividerHorizontal"
                android:showDividers="middle">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/imgViewEditPhoto"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/logo"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="6dp"
                        app:civ_shadow="false" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlEditName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/titleName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"/>

                    <TextView
                        android:id="@+id/editName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="holi"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_below="@id/titleName"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlEditEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/titleEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"/>

                    <TextView
                        android:id="@+id/editEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="holi"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_below="@id/titleEmail"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlEditTelef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/titleTelef"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telef"/>

                    <TextView
                        android:id="@+id/editTelef"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="holi"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_below="@id/titleTelef"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlEditPasswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/titlePasswd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passwd"/>

                    <TextView
                        android:id="@+id/editPasswd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_passwd"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_below="@id/titlePasswd"
                        android:layout_marginTop="5dp"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>



    </RelativeLayout>

</android.support.constraint.ConstraintLayout>